--- a/src/main/resources/static/assets/css/style.css
+++ b/src/main/resources/static/assets/css/style.css
@@ -843,7 +843,7 @@ select.form-control:not([size]):not([multiple]) {
   height: 50px;
   align-items: center; }
 .card .card-stats .card-stats-item {
-  width: calc(100% / 6);
+  /*width: calc(100% / 6);*/
   text-align: center;
   padding: 5px 20px; }
 .card .card-stats .card-stats-item .card-stats-item-label {
