대시보드 ajax 호출 구문 별도로 분리

--- a/src/main/resources/static/assets/css/custom.css
+++ b/src/main/resources/static/assets/css/custom.css
@@ -120,13 +120,10 @@
 }
 
 .btn-info, .btn-info.disabled {
-    color: #6777ef;
-    border-radius: 3px;
     box-shadow: 0 2px 6px transparent;
-    border-color: transparent;
-    background-color: #f9fafe;
-    font-weight: 600;
-    margin: 0 3px;
+    background-color: #3abaf4;
+    border-color: #3abaf4;
+    color: #fff;
 }
 
 .custom-nav{
