feat: Quick Search 신규 기능 추가

--- a/src/main/resources/static/assets/css/custom.css
+++ b/src/main/resources/static/assets/css/custom.css
@@ -275,3 +275,6 @@ table.loading tbody:after {
 .title-i-line-height{
     line-height: 10px;
 }
+.align-content-center{
+    align-content: center;
+}
